--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/wwwroot/css/site.css
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/wwwroot/css/site.css
@@ -66,3 +66,35 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+
+
+.buttonA {
+    background-color: lightgray;
+    border: none;
+    color: black;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 12px;
+    border: 2px solid;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 8px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    border-radius: 12px;
+}
+
+.nounderline {
+    color: black;
+    text-decoration: none;
+}
