--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/Index.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/Index.razor
@@ -1,9 +1,13 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Feiras Virtuais de Espinho</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<h1>Feiras Virtuais de Espinho</h1>
+<br />
+<div>
+	Este projeto desenvolvido no âmbito da UC Laboratório de Informática IV no ano letivo 2022/23
+</div>
+<br />
+<div>
+	Website de auxilio às feiras de espinho.
+</div>
