--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Shared/NavMenu.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Shared/NavMenu.razor
@@ -11,7 +11,7 @@
 
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
-        @foreach (Opcao op in getInstance().getMenu(menuApresentar))
+        @foreach (Opcao op in lista)
         {
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href=@op.Link Match="NavLinkMatch.All">
@@ -24,25 +24,22 @@
 
 @code
 {
-    public static int menuApresentar { get; set; }
+    public List<Opcao> lista { get; set; }
     private bool collapseNavMenu = true;
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-    private static NavBar menu = null;
-    public static NavMenu Current { get; private set; }
+    private static NavMenu instance;
     protected override void OnInitialized()
     {
-        menuApresentar = (int)NavBar.menusNomes.Login;
-        Current = this;
-    }
-    public static NavBar getInstance()
-    {
-        if (menu == null)
-            menu = new NavBar();
-        return menu;
+        lista = NavBar.GetInstance().GetMenu((int)NavBar.menusNomes.Login);
+        instance = this;
     }
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
+    }
+    public static NavMenu GetInstance()
+    {
+        return instance;
     }
     public void Refresh()
     {
