Fixed minor error that I was having

--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/Login/LoginComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/Login/LoginComponent.razor
@@ -55,6 +55,7 @@
 			if(existe)
 			{
 				NavMenu.GetInstance().lista = NavBar.GetInstance().GetMenu((int)NavBar.menusNomes.Cliente);
+				NavMenu.GetInstance().show = true;
 				NavMenu.GetInstance().Refresh();
 				_navigationManager.NavigateTo("user");
 			}
