--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/UserComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/UserComponent.razor
@@ -1,7 +1,7 @@
 ﻿@page "/user"
 @using FeirasEspinhoBlazorApp.SourceCode.Utilizadores;
 @using FeirasEspinhoBlazorApp.SourceCode.WebClasses;
-@inject NavigationManager _navigationManager
+@inject NavigationManager navigationManager
 
 <PageTitle>Página de utilizador</PageTitle>
 
