--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/Index.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/Index.razor
@@ -1,4 +1,6 @@
 ﻿@page "/"
+@using Data;
+@using SourceCode.Utilizadores;
 
 <PageTitle>Feiras Virtuais de Espinho</PageTitle>
 
@@ -11,3 +13,50 @@
 <div>
 	Website de auxilio às feiras de espinho.
 </div>
+
+<table>
+	<tbody>
+		<tr>
+			<th>Email</th>
+			<th>Nome</th>
+			<th>Password</th>
+			<th>Data Criação</th>
+			<th>Data Nascimento</th>
+		</tr>
+		@foreach (Utilizador user in lista)
+		{
+			<tr>
+				<td> @user.email</td>
+				<td> @user.username</td>
+				<td> @user.password</td>
+				<td> @user.dataCriacao</td>
+				<td> @user.dataNascimento</td>
+			</tr>
+		}
+	</tbody>
+</table>
+<button class="buttonA" @onclick="Create">Create</button>
+
+@code
+{
+	int num = 23;
+	private List<Utilizador> lista = new List<Utilizador>();
+	protected override void OnInitialized()
+	{
+		UtilizadoresDAO connection = UtilizadoresDAO.GetInstance();
+		lista = connection.ListAll();
+	}
+	public void Create()
+	{
+		UtilizadoresDAO connection = UtilizadoresDAO.GetInstance();
+		Utilizador user = new Utilizador();
+		user.email = "abc"+ num;
+		num++;
+		user.username = "abc1";
+		user.password = "abc1";
+		user.dataCriacao = DateTime.Now;
+		user.dataNascimento = DateTime.Now;
+		connection.Create(user);
+		lista = connection.ListAll();
+	}
+}
